@@ -4,6 +4,6 @@ AUX ardour-2.7.1-gcc44.patch 1418 SHA256 4473008fcec6d619301202ff6d12024eb08653e
 DIST ardour-2.8.11.tar.bz2 3322518 SHA256 6a743f42b795bb66179dd467c9b8e417e99d38fa915159155dd582709b563b73
 EBUILD ardour-2.8.11.ebuild 3985 SHA256 53fa87aaa2d862c60aba684e3f6caf03fd4645645d19cb7a70c8904f566de395 SHA512 5350b4a2f13dddb4f6e526eea93fe90ca4a7a9da6f66f20447ac717fd6733648f0c6d6bf4d816ee5b7ad1dfe26cd9213dcba14ecd723727dec629adc8a12b79e WHIRLPOOL ef6fecadf109afeb537d184f64e3baf72d0ae6c6a5ce419d6ac3b952f11bd49354be6a786eb32b4303d61cba3860de7d1f60c61defbe0b6bb92bd9a02f037abf
 EBUILD ardour-2.9999.ebuild 4014 SHA256 2bcd464a3ad3e9673ff958f9ad27a37621449893620686d2a32a2694929a412f SHA512 d05f4ab09ba5161d66cbac045f60cc4f1e852b98f8a67be8c06b39029b955636e8cac24c9fab69425b609fac19341c0a8f4b2274cd0f434b284f4ccde1ad6aa2 WHIRLPOOL b7d420623e92f02d4b2847013e341e00dae28a34491e0c74306f9e5d1cc1caa51347db64e6de02692022ed65d271f48865734fd8c494081668b126affcefe44b
-EBUILD ardour-3.9999.ebuild 2467 SHA256 b1795ba78bccebfa3f323feed3cfddb9a91bfb8c84f28f573058476d625f1c18 SHA512 2f35f7c76dc1c6c28af8d8bf79c1ab7a97db17fa7ceb37029d35db5a02bd2b5d97cfefeb036253d591adeb9b6ea42a2bcb4a1a677851f5a75c2e13d7189d743a WHIRLPOOL 7f39c8c55a6846cc99cb65e15a8c029aa898fbf3a46a8eaca1f32b3a67356a0b53a5267b2a676df49633fcd4303804c0458e5be2cf29f71631e01f02ed714139
-MISC ChangeLog 7698 SHA256 c1bac4c26a0713a8bb4f0b8e71d4054a09488e336ed7679699229619cd4bac67 SHA512 0dc35b1655882a72698be827f6c6c08c3202509af89838d9d5784b757f153cd97c6fa92be224b94d460b6278c68650dc15373e6a2e58921ac58fc6e743fac558 WHIRLPOOL 00be8e44fcba85d643f94be60da23386f3a3bf6625a4aa621752a23b9ee610c4fc0223a93533e6b825356333f9d5e75faee5c052fa0e2c45b28e57395b3bc57b
+EBUILD ardour-3.9999.ebuild 2404 SHA256 c35a9a254b1d5f11b28b71bf7c441483f0c10795cca120f64af9bf0140049b40 SHA512 665ec257beca53bb3abacf0731c17a9550d1704f4c46da9c432c9e871f88a4a285399d0b036189ed8338c68ee833a333fbca990b00a830646d975711505035b3 WHIRLPOOL f9ff0ee8a60fe599a751de56d49653fbf6fdfcde63c7348cccc309808aba6307355e51db9b9c89efddb1a61ef09987074abe8e878eac02db6e3b51232f3d8b56
+MISC ChangeLog 7817 SHA256 09517b66f58e6163b043a328fe35a3cc3c7d46da8a56dbcfc366c285670daaf1 SHA512 8afc18d3a48df46534df2d17e7e9bd7fa13626965e4c05dbba148f2bed9fdad3d73f4563e7f62561d24ceb8df8de8b73d6f35f4b619692a0a4588f4bafe80c86 WHIRLPOOL f7d167320557a000330bbe689b8ac7402b853254c7e661efff78ca628ecf6a7ef7d84f15c26dea75b3dfb721c5a3f17e4cda46a3e1e8b0e4c5410911b977e289
 MISC metadata.xml 1118 SHA256 6182c09084546eb57544ede9cc395628adfcf54cdcc5981b2ad7edbd50ce999c SHA512 c5adeb20a0104a02820a5afa05324234bb7a049884956a9b3bb8d0fcca67ee187f54f40ed1ff4dd3703fcd8b293ebcb77ef7a4f372f69f98a89871ed28f1485a WHIRLPOOL 58622a42d7d343b1884da8a671e7994530d6ddb5a31098b86d20d80ff59fba2f931d36c03931b4bc3b3f056f0070ceb69eb3927cd4253b9d68328c55df5db331
