@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Aug 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  ardour-3.9999.ebuild:
+  Remove freesound USE flag.
+
   20 Jun 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   ardour-3.9999.ebuild:
   No longer depend om media-libs/liblo[threads] (USE flag removed)
